--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: Your Site Title
-email: your-email@example.com
+title: Jobalia's GitHub Pages
+email: sjobalia@stanford.edu
 description: > # This means to ignore newlines until "baseurl:"
   A brief description of your GitHub Pages site.
 baseurl: "" # The subpath of your site, e.g. /blog/
-url: "http://yourusername.github.io" # The base hostname & protocol for your site
+url: "http://jobalias.github.io" # The base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
